<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:id="@+id/titleLoginTextView"
        android:textSize="42sp"
        android:text="@string/create_account"
        android:gravity="center"
        android:layout_margin="16dip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@+id/titleLoginTextView"
        android:layout_margin="16dp"
        android:layout_marginBottom="24dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/userNameCreationEditText"
        android:autofillHints="Please enter username"
        android:inputType="text"
        android:gravity="center"
        android:textSize="24sp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/userNameCreationEditText"
        android:layout_margin="16dp"
        android:layout_marginBottom="24dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/passwordCreationEditText"
        android:autofillHints="Please enter username"
        android:inputType="textPassword"
        android:gravity="center"
        android:textSize="24sp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:hint="@string/confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/passwordCreationEditText"
        android:layout_margin="16dp"
        android:layout_marginBottom="24dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/confirmPasswordCreationEditText"
        android:autofillHints="Please enter username"
        android:inputType="textPassword"
        android:gravity="center"
        android:textSize="24sp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordCreationEditText"
        android:id="@+id/signupCreationButton"
        android:text="@string/sign_up"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="300dp"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@+id/signupCreationButton"
        android:id="@+id/signupCancelButton"
        android:text="@string/cancel"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>