...

<!--    <Button-->
<!--        android:id="@+id/logButton"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="125dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:text="Grant Admin"-->
<!--        android:textSize="36sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/manageUserInputEditText" />-->

    <androidx.recyclerview.widget.RecyclerView
...
